update socket切り出し、リストページ表示
